--- a/extra.css
+++ b/extra.css
@@ -20,11 +20,10 @@
 	margin: 20px;
   }
   
-  .footer {
-	position: fixed;
+  footer {
+	position: absolute;
 	left: 0%;
 	right: 0%;
-	bottom: 0;
 	width: 100%;
 	text-align: center;
 	padding: 18px;
@@ -32,7 +31,4 @@
 	background-color: grey;
   }
   
-  .img {
-	width: 470px;
-	height: 380px;
-  }
+ 
