--- a/extra.css
+++ b/extra.css
@@ -21,9 +21,10 @@
   }
   
   footer {
-	position: absolute;
+	position: fixed;
 	left: 0%;
 	right: 0%;
+	bottom: 0;
 	width: 100%;
 	text-align: center;
 	padding: 18px;
@@ -31,4 +32,7 @@
 	background-color: grey;
   }
   
- 
+  .mh img {
+	width: 470px;
+	height: 380px;
+  }
